kops-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kube-redux
  name: kube-redux-service
  namespace: services
spec:
  ports:
  - name: tcp-kube-redux
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: kube-redux
  type: ClusterIP
